Added "Game" object and "InteractableObject" class; can now handle multiple objects

--- a/Testing/Testing/Testing.csproj
+++ b/Testing/Testing/Testing.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Game.cs" />
+    <Compile Include="InteractableObject.cs" />
     <Compile Include="player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -98,6 +100,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="resources\kanye.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="resources\lightbulb.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
